--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest test_nqueens.py
+  - pytest tests/test_nqueens.py
