--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ python:
 install:
   - pip install -r requirements.txt
 # command to run tests
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
 script:
   - pytest tests/test_nqueens.py
