--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
 services:
   - postgresql
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database db;' -U postgres
 script:
   - pytest tests/test_nqueens.py
